Display dropdowns medios

--- a/views/casos.ejs
+++ b/views/casos.ejs
@@ -724,8 +724,8 @@
             var entity = $(this).attr('id');
 
             displaySummaryFor(entity);
-            window.publicaciones.update();
-            window.reactions.update();
+            //window.publicaciones.update();
+            //window.reactions.update();
 
             var caso = $(this).text();
             $("#dropdown-title").text(caso + " ");
