--- a/views/lideres.ejs
+++ b/views/lideres.ejs
@@ -624,7 +624,15 @@
         ];
         // Javascript method's body can be found in assets/js/demos.js
         demo.initDashboardPageCharts();
-
+        /*
+            TODO: total de likes que tiene la pagina del lider (en caso de que tenga pagina de fb)
+            TODO: total de reacciones que ha recibido en su pagina el lider (todos los posts del lider) - en caso de que tenga página
+            TODO: de cuales temas habla más el lider en su pagina (en caso de que tenga pagina)
+            TODO: grafico de cantidad de posts sobre el personaje que se esta viendo (en los medios)
+            TODO: actividad del lider (cuantas publicaciones ha hecho en su pagina) - en caso de que tenga pagina
+            TODO: palabras que se suelen mencionar en publicaciones de este personaje (nada mas es buscar en el graph)
+            TODO: Palabras mas mencionadas (word cloud) en los comentarios sobre publicaciones de un personaje especifico (ej: cuando se publica de Uribe, los comentarios suelen contener las palabras)
+        */
         var config = {
             type: 'line',
             data: {
