--- a/views/lideres.ejs
+++ b/views/lideres.ejs
@@ -139,14 +139,14 @@
                             <a id="dropdown-title" href="#" class="btn dropdown-toggle" data-toggle="dropdown">
                                 <!-- TODO: reemplazar por el primero en orden alfabetico (con ejs) -->
                                 <% if (lideres.length > 0) { %>
-                                <%= lideres[0].friendly_name %>
+                                <%= lideres[0].name %>
                                 <% } %>
                                 <b class="caret"></b>
                             </a>
                             <ul id="lideres" class="dropdown-menu">
                                 <% if (lideres.length > 0) { %>
                                 <% lideres.forEach(function (lider) { %>
-                                    <li><a id="<%= lider._id %>" href="#"><%= lider.friendly_name %></a></li>
+                                    <li><a id="<%= lider.id %>" href="#"><%= lider.name %></a></li>
                                 <% }) %>
                                 <% } %>
                                 <!--
@@ -612,12 +612,12 @@
 <script type="text/javascript">
     $(document).ready(function() {
         var monthlyLabels = [
-            <% for (var i = 0; i < summary.monthLabels.length; i++) {
-                if (i != summary.monthLabels.length -1) { %>
-                    "<%= summary.monthLabels[i] %>",
+            <% for (var i = 0; i < summary.length; i++) {
+                if (i != summary.length -1) { %>
+                    "<%= summary[i].month %>/<%= summary[i].year %>",
                 <% }
                    else { %>
-                    "<%= summary.monthLabels[i] %>"
+                    "<%= summary[i].month %>/<%= summary[i].year %>"
                 <% }
                 }
             %>
@@ -645,22 +645,15 @@
                     backgroundColor: window.chartColors.red,
                     borderColor: window.chartColors.red,
                     data: [
-                        <% for (var i = 0; i < summary.monthLabels.length; i++) {
-                            if (i != summary.monthLabels.length -1) { %>
-                                "<%= summary.monthSummaries[i].negative %>",
+                        <% for (var i = 0; i < summary.length; i++) {
+                            if (i != summary.length -1) { %>
+                                "<%= summary[i].negative %>",
                             <% }
                                else { %>
-                                "<%= summary.monthSummaries[i].negative %>"
+                                "<%= summary[i].negative %>"
                             <% }
                             }
                         %>
-                        /*randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()*/
                     ],
                     fill: false,
                 }, {
@@ -670,22 +663,15 @@
                     backgroundColor: window.chartColors.green,
                     borderColor: window.chartColors.green,
                     data: [
-                        <% for (var i = 0; i < summary.monthLabels.length; i++) {
-                            if (i != summary.monthLabels.length -1) { %>
-                                "<%= summary.monthSummaries[i].positive %>",
+                        <% for (var i = 0; i < summary.length; i++) {
+                            if (i != summary.length -1) { %>
+                                "<%= summary[i].positive %>",
                             <% }
                                else { %>
-                                "<%= summary.monthSummaries[i].positive %>"
+                                "<%= summary[i].positive %>"
                             <% }
                             }
                         %>
-                        /*randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()*/
                     ],
                 }, {
                     label: "Sentimientos neutros",
@@ -695,22 +681,15 @@
                     backgroundColor: window.chartColors.blue,
                     borderColor: window.chartColors.blue,
                     data: [
-                        <% for (var i = 0; i < summary.monthLabels.length; i++) {
-                            if (i != summary.monthLabels.length -1) { %>
-                                "<%= summary.monthSummaries[i].neutral %>",
+                        <% for (var i = 0; i < summary.length; i++) {
+                            if (i != summary.length -1) { %>
+                                "<%= summary[i].neutral %>",
                             <% }
                                else { %>
-                                "<%= summary.monthSummaries[i].neutral %>"
+                                "<%= summary[i].neutral %>"
                             <% }
                             }
                         %>
-                        /*randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor(),
-                        randomScalingFactor()*/
                     ],
                 }]
             },
@@ -755,25 +734,32 @@
             var entity = $(this).attr('id');
             
             $.get("/summary/comments/" + entity, function (data) {
-                console.log(data.monthLabels);
                 // Negative
                 var negative = []
-                for (var i = 0; i < data.monthSummaries.length; i++) {
-                    negative.push(data.monthSummaries[i].negative);
+                for (var i = 0; i < data.length; i++) {
+                    negative.push(data[i].negative);
                 }
                 config.data.datasets[0].data = negative;
                 // Positive
                 var positive = []
-                for (var i = 0; i < data.monthSummaries.length; i++) {
-                    positive.push(data.monthSummaries[i].positive);
+                for (var i = 0; i < data.length; i++) {
+                    positive.push(data[i].positive);
                 }
                 config.data.datasets[1].data = positive;
                 // Neutral
                 var neutral = []
-                for (var i = 0; i < data.monthSummaries.length; i++) {
-                    neutral.push(data.monthSummaries[i].neutral);
+                for (var i = 0; i < data.length; i++) {
+                    neutral.push(data[i].neutral);
                 }
                 config.data.datasets[2].data = neutral;
+                
+                config.data.labels = [];
+                for (var i = 0; i < data.length; i++) {
+                    config.data.labels.push(data[i].month+ "/" + data[i].year)
+                }
+
+                monthlyLabels = [
+                ];
 
                 /*config.data.datasets.forEach(function(dataset) {
                     dataset.data = dataset.data.map(function() {
