--- a/views/lideres.ejs
+++ b/views/lideres.ejs
@@ -90,44 +90,6 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                        <!--
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">dashboard</i>
-                                    <p class="hidden-lg hidden-md">Dashboard</p>
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">notifications</i>
-                                    <span class="notification">5</span>
-                                    <p class="hidden-lg hidden-md">Notifications</p>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Mike John responded to your email</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You have 5 new tasks</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You're now friend with Andrew</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another Notification</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another One</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">person</i>
-                                    <p class="hidden-lg hidden-md">Profile</p>
-                                </a>
-                            </li>
-                        -->
                         </ul>
                     </div>
                 </div>
@@ -160,17 +122,27 @@
 
                     </div>
                     <div class="row">
+                        <%- include('graphs/comments-sentiment', {
+                            summary: summary
+                        }) %>
                         <!-- Line chart -->
+                        <!--
                         <div class="col-lg-12">
                             <canvas id="myChart" width="100%" height="400"></canvas>
                         </div>
+                        -->
+                    </div>
+                    <div class="row">
+                        <%- include('graphs/actividad', {
+                            summary: summary
+                        }) %>
                     </div>
                     <div class="row">
                         <div class="col-lg-6 col-md-12">
                             <div class="card">
                                 <div class="card-header" data-background-color="orange">
 
-                                    <h4 class="title">Comentarios populares sobre <span id="comment-lider"><% if (lideres.length > 0) { %><%= lideres[0].name %><% } %></span> este mes</h4>
+                                    <h4 class="title">Comentarios populares sobre <span id="comment-table-entity"><% if (lideres.length > 0) { %><%= lideres[0].name %><% } %></span> este mes</h4>
                                     <p class="category"></p>
                                 </div>
                                 <div class="card-content table-responsive">
@@ -250,25 +222,13 @@
 <script src="/js/perfect-scrollbar.jquery.min.js"></script>
 <!--  Notifications Plugin    -->
 <script src="/js/bootstrap-notify.js"></script>
-<!--  Google Maps Plugin    -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 <!-- Material Dashboard javascript methods -->
 <script src="/js/material-dashboard.js?v=1.2.0"></script>
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
 <script src="/js/demo.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
-        var monthlyLabels = [
-            <% for (var i = 0; i < summary.length; i++) {
-                if (i != summary.length -1) { %>
-                    "<%= summary[i].month %>/<%= summary[i].year %>",
-                <% }
-                   else { %>
-                    "<%= summary[i].month %>/<%= summary[i].year %>"
-                <% }
-                }
-            %>
-        ];
+        
         // Javascript method's body can be found in assets/js/demos.js
         demo.initDashboardPageCharts();
         /*
@@ -280,168 +240,18 @@
             TODO: palabras que se suelen mencionar en publicaciones de este personaje (nada mas es buscar en el graph)
             TODO: Palabras mas mencionadas (word cloud) en los comentarios sobre publicaciones de un personaje especifico (ej: cuando se publica de Uribe, los comentarios suelen contener las palabras)
         */
-        var config = {
-            type: 'line',
-            data: {
-                // TODO: poner años programatically
-                /*labels: ["Enero/16", "Febrero/16", "Marzo/16", "Abril/16", "Mayo/16", "Junio/16", "Julio/16", "Agosto/16", "Septiembre/16", "Octubre/16", "Noviembre/16", "Diciembre/16", "Enero/17", "Febrero/17", "Marzo/17", "Abril/17", "Mayo/17", "Junio/17", "Julio/17", "Agosto/17", "Septiembre/17", "Octubre/17", "Noviembre/17", "Diciembre/17"],*/
-                labels: monthlyLabels,
-                datasets: [{
-                    label: "Sentimientos negativos",
-                    lineTension: 0,
-                    backgroundColor: window.chartColors.red,
-                    borderColor: window.chartColors.red,
-                    data: [
-                        <% for (var i = 0; i < summary.length; i++) {
-                            if (i != summary.length -1) { %>
-                                "<%= summary[i].negative %>",
-                            <% }
-                               else { %>
-                                "<%= summary[i].negative %>"
-                            <% }
-                            }
-                        %>
-                    ],
-                    fill: false,
-                }, {
-                    label: "Sentimientos positivos",
-                    lineTension: 0,
-                    fill: false,
-                    backgroundColor: window.chartColors.green,
-                    borderColor: window.chartColors.green,
-                    data: [
-                        <% for (var i = 0; i < summary.length; i++) {
-                            if (i != summary.length -1) { %>
-                                "<%= summary[i].positive %>",
-                            <% }
-                               else { %>
-                                "<%= summary[i].positive %>"
-                            <% }
-                            }
-                        %>
-                    ],
-                }, {
-                    label: "Sentimientos neutros",
-                    hidden: true,
-                    lineTension: 0,
-                    fill: false,
-                    backgroundColor: window.chartColors.blue,
-                    borderColor: window.chartColors.blue,
-                    data: [
-                        <% for (var i = 0; i < summary.length; i++) {
-                            if (i != summary.length -1) { %>
-                                "<%= summary[i].neutral %>",
-                            <% }
-                               else { %>
-                                "<%= summary[i].neutral %>"
-                            <% }
-                            }
-                        %>
-                    ],
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                title:{
-                    display:true,
-                    text:'Comentarios'
-                },
-                tooltips: {
-                    mode: 'index',
-                    intersect: false,
-                },
-                hover: {
-                    mode: 'nearest',
-                    intersect: true
-                },
-                scales: {
-                    xAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'Tiempo'
-                        }
-                    }],
-                    yAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'Valor'
-                        }
-                    }]
-                }
-            }
-        };
+        
 
-        var ctx = document.getElementById("myChart").getContext("2d");
-        window.myLine = new Chart(ctx, config);
+        
 
-        $("#lideres > li > a").on('click', function (evt) {
-            console.log("clicked")
-            var entity = $(this).attr('id');
-            var seleccionado = $(this).text();
-            $("#comment-lider").html(seleccionado);
-            console.log("Seleccionado", seleccionado)
-            
-            $.get("/summary/comments/" + entity, function (data) {
-                // Negative
-                var negative = []
-                for (var i = 0; i < data.length; i++) {
-                    negative.push(data[i].negative);
-                }
-                config.data.datasets[0].data = negative;
-                // Positive
-                var positive = []
-                for (var i = 0; i < data.length; i++) {
-                    positive.push(data[i].positive);
-                }
-                config.data.datasets[1].data = positive;
-                // Neutral
-                var neutral = []
-                for (var i = 0; i < data.length; i++) {
-                    neutral.push(data[i].neutral);
-                }
-                config.data.datasets[2].data = neutral;
-                
-                config.data.labels = [];
-                for (var i = 0; i < data.length; i++) {
-                    config.data.labels.push(data[i].month+ "/" + data[i].year)
-                }
-
-                console.log(data);
-
-                /*config.data.datasets.forEach(function(dataset) {
-                    dataset.data = dataset.data.map(function() {
-                        return randomScalingFactor();
-                    });
-                });*/
-
-                window.myLine.update();
-                //var replaceStr = '<tbody id="top-comments">';
-                var replaceStr = '';
-                if (data.length > 0) {
-                    console.log("data.length > 0");
-                    for (var i = 0; i < data[data.length - 1].top_comments.length; i++) {
-                        replaceStr += "<tr>";
-                        replaceStr += "<td>" + (i+1) + "</td>";
-                        replaceStr += "<td>" + data[data.length - 1].top_comments[i] + "</td>";
-                        replaceStr += "<td>" + data[data.length - 1].like_counts[i] + "</td>";
-                        replaceStr += "</tr>";
-                    }
-                }
-                $("#top-comments").html(replaceStr);
-                
-            });
-
-            // TODO: traer los datos de la persona que fue clicked
-
-            var lider = $(this).text();
-            $("#dropdown-title").text(lider + " ");
-            $("#dropdown-title").append('<b class="caret"></b>');
-        });
+        /*var myChartCtx = document.getElementById("posts").getContext("2d");
+        window.posts = new Chart(myChartCtx, config);*/
 
     });
 </script>
-<script src="/js/lideres.js"></script>
+<%- include('scripts/dropdown.ejs', {
+}) %>
+<%- include('scripts/comments-sentiment.ejs', {
+    summary: summary
+}) %>
 </html>
